Eclipse 4.32 (M3) JDT Patch for Groovy-Eclipse
https://github.com/eclipse-jdt/eclipse.jdt.core/releases/tag/S4_32_0_M3

for #1548 #1568